--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>First Documemt</title>
   </head>
   <body>
-    <h1>Hope</h1>
+    <h1>Hope everything is going smooth</h1>
   </body>
 </html>
