--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Hope everything is going smooth</h1>
+    <p>today we have learn basic html page structure.</p>
   </body>
 </html>
